--- a/workshop/content/documentation/abstract.adoc
+++ b/workshop/content/documentation/abstract.adoc
@@ -16,16 +16,22 @@ endif::[]
 
 = Workshop Abstract
 
-This hands-on lab will lead you through a mix of self-paced and proctored exercises covering core and updated 
-capabilities of Red Hat Enterprise Linux 9.  Led by your favorite Red Hat field solution architects, key areas covered include:
+This hands-on workshop will lead you through a series of self-paced labs covering many, emerging, areas where *wasm* and OCI work together.
 
-    * Ease of use: web console, dnf
-    * Security: Simple system-level disk encryption, session recording with tlog, net-filter and nft-tools
-    * Performance: Tracing with ebpf, Cgroups v1 vs. v2, XFS enhancements
-    * Management: Gold image creation with image builder, Containers with podman, skopio, buildah, boot image management with Boom.
+    * Building
+    * Running
+    * Signing
+    * Internals - what is going on
+    * Simple benchmarking and performance
+    * Kubernetes (Microshift)
 
-And plenty more... There will be ample experts on hand to help and answer your questions. Join us and begin your journey to 
-becoming a Red Hat Enterprise Linux 9 expert.
+    /* TODO: Add link */
+                    
+And plenty more... 
+
+You are encouraged to bring your own work and experiment with it but source code is provided throughout.
+
+Enjoy!
 
 [discrete]
 == End of Unit
