--- a/workshop/content/documentation/webassembly-container-benchmarking.adoc
+++ b/workshop/content/documentation/webassembly-container-benchmarking.adoc
@@ -28,30 +28,170 @@ endif::[]
 :toc:
 :toclevels: 1
 
-= Setup Your WebAssembly Container Runtime Environment
+= Bonus Lab - Benchmarking native WebAssembly against Containerized WebAssembly
 
 == Overview
 
-In this lab we'll extend our Rust and WebAssembly environment to enable building and running WebAssembly `.wasm` Images via an external wasm runtime.
+This is more a fun lab than a scientific one and to make an accurate determination would take a more rigorous approach. However it is an interesting question, particularly given the focus on WebAssembly with particular workloads such as Serverless and FaaS (Function as a Service).
 
-== Installing your OCI and Container Toolchain
+One of the current focus areas of WebAssembly is FaaS and how `.wasm` has tremendous potential where fast startup is a key attribute. Of course this lab completely ignores how either raw `.wasm` or wasm containers would be scheduled.
 
-In this section we will install upstream versions of:
+Unfortunately our existing container `http_server` runs as a service so let's build a new image with a shorter runtime.
 
-* crun (which will include wasm spport)
-* podman
-* buildah
+== Part 1: Building a new image
 
-Your development environment so far has deliberately *not* been setup with a typical container toolchain. In normal circumstances these are commonly installed and are pulled from official Red Hat repositories. In our case we want to bypass these and use upstream development versions of the toolchain.
 
-WARNING: Doing this to production systems would typically break your support. However in our case we want to use the latest cutting edge tools as there is much current innovation in this area especially with regard to working with WebAssembly.
-
-. Verify `podman`, `buildah`, and `crun` are *not* installed
+. Change directory via `cd` into a Rust project `simple_benchmark_test`
 +
 [{format_cmd_output}]
 ----
-$  type crun podman buildah
+$ cd wasm-oci-source-code-examples/simple_benchmark_test
 ----
++
+
+NOTE: You can easily inspect the source with `vim src/main.rs` if you want to examine what pair programming with ChatGPT4 looks like. Basically we are simply going to do some simple I/O and calculate some prime numbers to consume a bit more system time than a simple "hello World".
+
+. Build your .wasm artifact with `cargo`
++
+
+[{format_cmd_output}]
+----
+$ cargo build --target wasm32-wasi --release
+----
++
+
+.Sample Output
+[source,textinfo]
+----
+    Finished release [optimized] target(s) in 0.02s
+----
+
+. Validate your .wasm file runs with `wasmedge` and use `time` for a very crude measure
++
+
+[{format_cmd_output}]
+----
+$ time wasmedge ./target/wasm32-wasi/release/simple_benchmark_test.wasm
+----
++
+
+.Sample Output
+[source,textinfo]
+----
+Hello, world!
+largest prime below 38765432 final value : Some(38765393)
+
+real    0m11.913s
+user    0m10.835s
+sys     0m0.008s
+----
+
+. Build a WebAssembly Container using the supplied Containerfile
++
+
+[{format_cmd_output}]
+----
+$ time wasmedge ./target/wasm32-wasi/release/simple_benchmark_test.wasm
+buildah build --platform wasm/wasi --annotation "run.oci.handler=wasmedge" -t quay.io/tonykay/simple_benchmark_test:0.1.0 .
+----
++
+NOTE: If you are not planning on pushing the image ten you omit the `<REGISTRY>/<REPO>` in your container name.
++
+.Sample Output
+[source,textinfo]
+----
+STEP 1/3: FROM scratch
+STEP 2/3: COPY ./target/wasm32-wasi/release/simple_benchmark_test.wasm /
+STEP 3/3: CMD ["/simple_benchmark_test.wasm"]
+COMMIT quay.io/tonykay/simple_benchmark_test:0.1.0
+Getting image source signatures
+Copying blob 8619044b0834 skipped: already exists
+Copying config f0bdb91bd2 done
+Writing manifest to image destination
+Storing signatures
+--> f0bdb91bd24f
+Successfully tagged quay.io/tonykay/simple_benchmark_test:0.1.0
+----
+
+. Run you new image, again with `time`
++
+
+[{format_cmd_output}]
+----
+$ time podman run --rm --name benchmark simple_benchmark_test:0.1.0
+----
++
+.Sample Output
+[source,textinfo]
+----
+Hello, world!
+largest prime below 38765432 final value : Some(38765393)
+
+real    0m12.384s
+user    0m0.085s
+sys     0m0.046s
+----
+
+You will probably see that the Containerized version did in fact take _"a bit longer to run"_ but a couple of runs with time like this is not particularly meaningful. For example `podman` may have already been in memory` whilst `wasmedge` had to be loaded from disk etc. or of course the opposite.
+
+== Part 2: Basic Benchmarks with `hyperfine`
+
+In this part we are going to make our benchmark a bit more meaningful by using `hyperfine` to do:
+
+* warmups e.g. reduce cold start paging issues etc as files are read of disks
+* average multiple runs
+
+As stated this is a bonus fun lab and PRs and improvements to the code are gratefully accepted.
+
+. First use `hyperfine` to run the native `wasmedge` version.
++
+
+[{format_cmd_output}]
+----
+$ hyperfine --shell=none  --warmup 3 --runs 5 "wasmedge ./target/wasm32-wasi/release/simple_benchmark_test.wasm"
+----
++
+
+.Sample Output
+[source,textinfo]
+----
+Benchmark 1: wasmedge ./target/wasm32-wasi/release/simple_benchmark_test.wasm
+  Time (mean ± σ):     12.022 s ±  0.051 s    [User: 10.885 s, System: 0.011 s]
+  Range (min … max):   11.965 s … 12.098 s    5 runs
+----
+
+. Repeat the prior test, this time via `podman`
++
+
+[{format_cmd_output}]
+----
+$ hyperfine --shell=none  --warmup 3 --runs 5 "podman run --rm --name benchmark simple_benchmark_test:0.1.0"
+----
++
+
+.Sample Output
+[source,textinfo]
+----
+Benchmark 1: podman run --rm --name benchmark simple_benchmark_test:0.1.0
+  Time (mean ± σ):     12.314 s ±  0.075 s    [User: 0.083 s, System: 0.046 s]
+  Range (min … max):   12.235 s … 12.434 s    5 runs
+----
+
+= Summary
+
+So hopefully that was a fun and interesting exercise as we saw wasmedge bake off against podman running the containerized version of the same payload.
+
+But as we discussed earlier `podman` is a Container Engine and *not* a Container Runtime, what if we could go straight to `crun`? In our next, also Bonus, lab we'll get `crun` running our OCI image directly which is an interesting exercise in its own right and then performing that simple benchmark.
+
+
+
+
+
+
+
+
+
+
 +
 .Sample Output
 [source,textinfo]
@@ -94,9 +234,10 @@ Transaction Summary
 Complete!
 ----
 +
-. Now add our external COPR registry with many upstream projects represented including podman-next
+. Now add our external repo COPR podman-next
 +
-
+NOTE: TODO: add explanation and links etc re copr
++
 [{format_cmd_output}]
 ----
 $ sudo dnf copr enable -y copr.fedorainfracloud.org/rhcontainerbot/podman-next
@@ -142,33 +283,28 @@ $ sudo dnf install -y crun-wasm podman buildah
 Complete!
 ----
 +
-
 . Next verify you have the correct components
 +
-
 [{format_cmd_output}]
 ----
 $  podman --version; buildah --version
 ----
 +
-
 .Sample Output
 [source,textinfo]
 ----
 podman version 4.5.0-dev
 buildah version 1.30.0-dev (image-spec 1.0.2-dev, runtime-spec 1.1.0-rc.1)
 ----
-NOTE: Your exact versions may vary, what is important is you are seeing the `--dev` postfix on both `podman` and `buildah`
+NOTE: Your exact versions may vary, what is importnat is you are saeeing the `--dev` postfix on both `podman` and `buildah`
 +
-
 . Finally verify that the installed Container Runtime `crun` has support for `wasmedge`
 +
 [{format_cmd_output}]
 ----
-$ crun --version
+$  crun --version
 ----
 +
-
 .Sample Output
 [source,textinfo]
 ----
@@ -179,7 +315,6 @@ spec: 1.0.0
 +SYSTEMD +SELINUX +APPARMOR +CAP +SECCOMP +EBPF +WASM:wasmedge +YAJL
 ----
 +
-
 NOTE: Again your exact output may vary, however key is that the final line contains the WebAssembly support `+WASM:wasmedge`
 
 == Conclusion
