--- a/workshop/content/overview.adoc
+++ b/workshop/content/overview.adoc
@@ -19,7 +19,14 @@
 First of all, THANK YOU for choosing to participate in this *WebAssembly and OCI - Better Together Workshop*.
 These hands-on lab will lead you through a series of self-paced labs focussed on different areas of using wasm with OCI technologies.
 
+In this particualr workshop we've chose to use the following mainstream technologies to explore WebAssembly and OCI:
 
+* Rust
+* `wasmedge` - integrated with `crun` ( more on that later)
+* `podman`, `buildah` and `skopeo`
+** At appropriate points we'll compare/contrast with Docker's `containerd` shim approach 
+* Microshift (Red Hat's Open)
+** `CRI-0`
 
  and proctored exercises covering core and updated capabilities of RHEL 9.
 The lab team has worked very hard to assemble a series of exercises to introduce many of the new features and capabilities 
@@ -37,42 +44,3 @@ NOTE: This is not a WebAssembly, or wasm, development workshop. It is focussed o
 * Introducing 
 * Building pure WebAssembly Container Images
 ** i.e. Single layer `.wasm` artifacts only
-
-
-
-Nor is it As an administrator, you are capable of ruining your environment.  We strongly encourage you
-to stick to the exercises as prescribed.  Recovery of your environment is unlikely due to limited time and resources.
-
-WARNING: We only test with Firefox and/or Google Chrome.  Your mileage will vary using MacOS Safari or Windows Explorer.
-
-=== Workshop Source
-
-NOTE:  This whole effort is done using official Red Hat software and although things can likely be set up to work with upstream software components (Fedora, CentOS, etc...), alternate derivatives of RHEL are not tested or validated with these exercises.
-
-Source for this workshop: http://github.com/xtophd/RHEL9-Workshop
-
-== Environment Description
-
-Exercises in this workshop require either:
-
-  * shell access (via ssh)
-  * shell access (via bookbag)
-  * web gui access (via web console)
-
-You can use the convenient shell provided to the right of these instructions (bookbag), or if you prefer you can use your preferred ssh client with the same connectivity info.  Your choice...
-
-Activities in this workshop are performed on virtual machines running in a public cloud.  Each attendee has received their own unique environment and will be provided administrator priviledges when needed.
-
-There are 5 systems:
-
-  * bastion - primary system and launch point to other hosts
-  * node1
-  * node2
-  * node3
-  * leapp
-
-The network domain is likely `example.com` but not necessarily so.  We expect most exercises and envionments will work by using the short hostnames.  So when asked to use `node1` for a unit:
-
-  * first `ssh bastion` using the provided connection and credential info
-  * and then `ssh node1`
-
